syntax = "proto3";

package event_store;

option go_package = "event_store_pb";

message Event {
    string event_id = 1;
    string event_type = 2;
    string aggregate_id = 3;
    string aggregate_type = 4;
    string event_data = 5;
    string channel = 6; // an optional field
}


message CreateEventRequest {
    Event event = 1;
}

message CreateEventResponse {
    bool is_success = 1;
    string error = 2;
}

message GetEventsRequest {
    string event_id = 1;
    string aggregate_id = 2;
}

message GetEventsResponse {
    repeated Event events = 1;
}

service EventStoreService {
    // Get all events for the given aggregate and event
    rpc GetEvents(GetEventsRequest) returns (GetEventsResponse) {}
    // Create a new event to the event store
    rpc CreateEvent (CreateEventRequest) returns (CreateEventResponse) {}
}